modules/eks/nacls.tf
resource "aws_network_acl" "eks-cluster-nacl" {
  vpc_id = var.vpc_id

  ingress {
    rule_no    = 100
    protocol   = "tcp"
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 443
    to_port    = 443
  }

  ingress {
    rule_no    = 101
    protocol   = "tcp"
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 1025
    to_port    = 65535
  }

  ingress {
    rule_no    = 102
    protocol   = "icmp"
    action     = "allow"
    cidr_block = "0.0.0.0/0"
  }

  egress {
    rule_no    = 100
    protocol   = "tcp"
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 1025
    to_port    = 65535
  }

  egress {
    rule_no    = 101
    protocol   = "tcp"
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 443
    to_port    = 443
  }

  egress {
    rule_no    = 102
    protocol   = "icmp"
    action     = "allow"
    cidr_block = "0.0.0.0/0"
  }
}

resource "aws_network_acl_association" "eks-cluster-nacl-association" {
  count = length(var.subnets)

  subnet_id      = var.subnets[count.index]
  network_acl_id = aws_network_acl.eks-cluster-nacl.id
}
